crates/apollo-compiler/test_data/diagnostics/0091_recursive_interface_definition.txt
Error: interface `A` declares that it implements `B`, but to do so it must also implement `A`
   ╭─[0091_recursive_interface_definition.graphql:1:1]
   │
 1 │ ╭─▶ interface A implements B {
   ┆ ┆   
 3 │ ├─▶ }
   │ │       
   │ ╰─────── A must also be implemented here
 4 │     interface B implements A {
   │                            ┬  
   │                            ╰── implementation of A declared by B here
───╯
Error: interface `B` declares that it implements `A`, but to do so it must also implement `B`
   ╭─[0091_recursive_interface_definition.graphql:4:1]
   │
 1 │     interface A implements B {
   │                            ┬  
   │                            ╰── implementation of B declared by A here
   │ 
 4 │ ╭─▶ interface B implements A {
   ┆ ┆   
 6 │ ├─▶ }
   │ │       
   │ ╰─────── B must also be implemented here
───╯

